--- a/templates/home.html
+++ b/templates/home.html
@@ -81,6 +81,10 @@
         <input type="file" id="actual-btn" name="file1"><br>
         <label>Supported Medical Documents</label><br>
         <input type="file" id="actual-btn" name="file2"><br>
+        <label>Start Date</label><br>
+        <input type="time" id="actual-btn" name="time"><br>
+        <label>End Date</label><br>
+        <input type="time" id="actual-btn" name="time"><br>
         <button type="submit">Submit</button>
     </form>
 </body>
