--- a/templates/admindashboard.html
+++ b/templates/admindashboard.html
@@ -20,8 +20,15 @@
     font-weight: bold;
     font-size: 25px;
     border: none;}
-
-     
+#go{
+     transition: all 0.3s ease;
+}
+#go:hover {
+  transform: translateY(-3px);
+}
+.g1{
+  color: brown;
+}
 
     </style>
 </head>
@@ -47,11 +54,7 @@
     </div>
 
 
-
-
-
-
-    
+  
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 </body>
