--- a/templates/allcampaigns.html
+++ b/templates/allcampaigns.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Records</title>
     <style>
         body{
-            color:rgb(240, 189, 127)
+            background-color: rgb(243, 202, 151);
+            
         }
         .col{
             color:black;
@@ -16,7 +17,7 @@
     </style>
 </head>
 <body>
-    <table border="1px" style="width: 97%; text-align: center; font-size: 20px;" >
+    <table border="1px" style="width: 100%; text-align: center; font-size: 20px;" >
         <tr>
             <th class="col">Campaign id</th>
             <th class="col">Campaign name</th>
@@ -26,9 +27,8 @@
             <th class="col">funds collected</th>
             <th class="col">Documents</th>
             <th class="col">Date created</th>
-            <th class="col">Status</th>
-           
-            
+            <th class="col">Status</th> 
+            <th class="col">Delete</th> 
         </tr>
         {% for i in cids %}
         <tr>
@@ -38,19 +38,21 @@
             <td>{{i[3]}}</td>
             <td>{{i[4]}}</td>
             <td>{{i[5]}}</td>
-            <td><a href="{{url_for('viewfile',cid=i[0])}}">view</a></td>
+            <td><a href="{{url_for('viewfile',cid=i[0])}}">View</a></td>
             <td>{{i[8]}}</td>
             {% if session.get('admin') %}
                 {% if i[9]=='Not Approved' %}
-                    <td><a href="{{url_for('approve',cid=i[0])}}">click here to approve</a></td>
+                    <td><a href="{{url_for('approve',cid=i[0])}}">Click here to approve</a></td>
                 {% else %}
                     <td>{{i[9]}}</td>
                 {% endif %}
             {% else %}
                 <td>{{i[9]}}</td>
             {% endif %}
+            <td><a href="{{url_for('delete',cid=i[0])}}">Delete</a></td>
+            
         </tr>
-        {% endfor %}
-     </table>
+    {% endfor %}
+</table>    
 </body>
 </html>
