--- a/templates/allcampaigns.html
+++ b/templates/allcampaigns.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Records</title>
+    <title>Document</title>
     <style>
         body{
             background-color: rgb(243, 202, 151);
@@ -17,18 +17,18 @@
     </style>
 </head>
 <body>
-    <table border="1px" style="width: 100%; text-align: center; font-size: 20px;" >
+    <table border="1px" style="width: 100%; text-align: center; font-size: 20px;">
         <tr>
             <th class="col">Campaign id</th>
             <th class="col">Campaign name</th>
             <th class="col">Created by</th>
-            <th class="col">description</th>
-            <th class="col">funds required</th>
-            <th class="col">funds collected</th>
+            <th class="col">Description</th>
+            <th class="col">Funds required</th>
+            <th class="col">Funds collected</th>
             <th class="col">Documents</th>
             <th class="col">Date created</th>
-            <th class="col">Status</th> 
-            <th class="col">Delete</th> 
+            <th class="col">Status</th>
+            <th class="col">Action</th> 
         </tr>
         {% for i in cids %}
         <tr>
@@ -47,12 +47,12 @@
                     <td>{{i[9]}}</td>
                 {% endif %}
             {% else %}
-                <td>{{i[9]}}</td>
+                <td>{{i[9]}}</td>  
             {% endif %}
-            <td><a href="{{url_for('delete',cid=i[0])}}">Delete</a></td>
-            
+         
+            <td><a href="{{url_for('delete',cid=i[0])}}">View</a></td>
         </tr>
-    {% endfor %}
-</table>    
+        {% endfor %}
+    </table>
 </body>
 </html>
